--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ body {
       padding: 30px;
       border-radius: 20px;
       background-color: #ddd;
-      box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+      box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+       rgba(0, 0, 0, 0.22) 0px 15px 12px;
     }
     
     .details {
@@ -39,7 +40,6 @@ body {
     box-shadow: 0px 6px 5px black;
     -moz-border-radius:190px;
     -webkit-border-radius:190px;
-    border-radius:190px;
     }
     
     .now-playing {
@@ -125,8 +125,8 @@ body {
     width: 30%;
     }
     
-    .current-time,
-    .total-duration {
+    .current_time,
+    .total_duration {
     padding: 10px;
     }
     
